# amused-gtk

./: .gitignore  README.md  README_amused_example.md  amused_example.py  io.github.thecodenomad.amused_gtk.json  meson.build  pyproject.toml  python-deps.json  requirements.txt  update_python_dependencies.sh
data/: io.github.thecodenomad.amused_gtk.desktop.in  io.github.thecodenomad.amused_gtk.gschema.xml  io.github.thecodenomad.amused_gtk.metainfo.xml.in  io.github.thecodenomad.amused_gtk.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: amused-gtk.gresource.xml.in  amused-gtk.in  frequency_display.py  main.py  meson.build  window.py
src/blueprints/: frequency_display.blp  window.blp
tests/: test_backend_availability.py  test_data_processing.py  test_frequency_display.py  test_gtk_integration.py  test_image_rendering.py  test_signature.py
